<resources>
    <string name="app_name">오류 유형별 접근성 해결방안</string>
    <string name="example1_title">접근성이 적용되지 않은 예시</string>
    <string name="example2_title">접근성이 적용된 예시</string>
    <string name="liveregion_title">화면의 텍스트가 변경되었을 때</string>
    <string name="live_region_text">스크린 리더 사용자가 특정 객체를 이중탭하였을 때 화면의 다른 객체의 정보가 변경된 경우에는 LiveRegion 속성을 통해 스크린리더가 변경된 텍스트를 읽어줄 수 있도록 해 주어야 합니다.</string>
    <string name="add">증가</string>
    <string name="take">감소</string>
    <string name="live_region_example1_text">톡백을 켠 상태로 증가, 혹은 감소 버튼을 이중탭해 보세요. 접근성이 적용되어 있지 않아 화면에서 바뀌고 있는 텍스트를 바로바로 읽어주지 못하고 있습니다.</string>
    <string name="liveregionexample1_title">LiveRegion, 접근성이 적용되지 않은 예시</string>
    <string name="liveregionexample2_title">LiveRegion, 접근성이 적용된 예시</string>
    <string name="live_region_example2_text">톡백을 켠 상태로 증가, 감소 버튼을 이중탭해보세요. LiveRegion 속성이 적용되어 있어 화면의 텍스트가 바뀌는 내용을 바로바로 읽어주는 것을 확인할 수 있습니다.</string>
    <string name="label_for_title">편집창에 포커스 했을 때</string>
    <string name="label_for_text">편집창과 레이블 텍스트 view가 분리된 경우 레이블 view와 EditText view를 labelFor로 연결해 주지 않으면 스크린 리더 사용자는 한 손가락 위로 쓸기를 통해 컨트롤 단위 탐색으로 변경 후 한 손가락 오른쪽 쓸기로 탐색 시 편집창에 포커스 했을 때 무엇을 입력해야 하는지 알 수 없습니다. 또한 하드웨어 키보드를 사용하는 경우에도 탭키를 눌러 편집창에 포커스 할 경우 입력 레이블을 읽어주지 않습니다. </string>
    <string name="label_for_example1_title">labelFor, 접근성이 적용되지 않은 예시</string>
    <string name="label_for_example2_title">labelFor, 접근성이 적용된 예시</string>
    <string name="carousel_title">슬라이드 데모</string>
    <string name="carousel_content">화면에 슬라이드를 표시하는 경우 스크린 리더 사용자는 슬라이드를 정지하거나 재생할 수 있어야 합니다.</string>
    <string name="carousel_good_accessibility">슬라이드, 접근성이 적용된 예시</string>
    <string name="carousel_bad_accessibility">슬라이드, 접근성이 적용되지 않은 예시</string>
    <string name="previous">이전</string>
    <string name="next">다음</string>
    <string name="pause">정지</string>
    <string name="play">재생</string>
    <string name="previous_desc">이전 슬라이드</string>
    <string name="next_desc">다음 슬라이드</string>
    <string name="pause_desc">배너 정지</string>
    <string name="play_desc">배너 재생</string>
    <string name="man_holding_iPhone">아이폰을 들고 있는 남자</string>
    <string name="woman_holding_iPhone">아이폰을 들고 있는 여자</string>
    <string name="person_holding_android">안드로이드 폰을 들고 있는 사람</string>
    <string name="talk_back_turned_on">톡백을 켠 상태로 해당 화면에 진입하셨습니다. 톡백을 끄고 뒤로 빠져 나갔다가 다시 해당 화면으로도 진입해 보세요.</string>
    <string name="talk_back_turned_off">톡백을 끈 상태로 해당 화면에 진입하셨습니다. 이번에는 톡백을 켜고 뒤로 빠져나갔다가 다시 해당 화면에 진입해 보세요.</string>
    <string name="edit_text">힌트 메시지를 사용할 수 없을때</string>
    <string name="onTouch">온터치리스너를 사용해야 할 때</string>
    <string name="on_touch_title">온터치 리스너 구현 시</string>
    <string name="stay_focus">접근성 포커스 유지하기</string>
    <string name="title_grouping">Grouping</string>
    <string name="title_roles_and_actions">Roles and Actions</string>
    <string name="title_stage_changes">State Changes</string>
    <string name="title_recycler_view_scrolling">RecyclerView Scrolling</string>
    <string name="title_recycler_view_focus">RecyclerView Focus</string>
    <string name="grouping_bad_description">An example of bad grouping.</string>
    <string name="grouping_improved_description">An example of improved grouping.</string>
    <string name="user_name_example">Name</string>
    <string name="user_surname_example">Surname</string>
    <string name="placeholder_avatar_content_description_example">User placeholder avatar</string>
    <string name="content_description_user_combined">Name Surname</string>
    <string name="button_login">Login</string>
    <string name="button_role">Button</string>
    <string name="roles_description">An example of the roles.\nThe following components are Button, TextView with listener, TextView with listener and role.</string>
    <string name="content_description_edit_note">Edit note</string>
    <string name="action_edit_note">Edit note</string>
    <string name="action_copy_note">Copy note</string>
    <string name="actions_description">An example of actions.\nThe following elements have tap and long tap actions, one is default and the other sets additional action descriptions.</string>
    <string name="recycler_view_non_scrolling_description">The following RecyclerView cannot scroll to all elements with Talkback.</string>
    <string name="recycler_view_scrolling_description">The following RecyclerView scrolls to all elements with Talkback.</string>
    <string name="recycler_view_lost_focus">The following RecyclerView loses focus with Talkback.</string>
    <string name="recycler_view_with_focus">The following RecyclerView does not loose focus with Talkback.</string>
    <string name="content_description_delete_item">삭제</string>
    <string name="description_state_changes">An example of states changes.\nFirst button does not update accessibility information, including content description and action, second one does.</string>
    <string name="content_description_favorite">Favorite item</string>
    <string name="content_description_not_favorite">Not favorite item</string>
    <string name="content_description_action_favorite">Add to favorites</string>
    <string name="content_description_action_remove_from_favorites">Remove from favorites</string>
    <string name="item_deleted_x">%s 삭제됨</string>
    <string name="stay_focus_content">특정 요소를 이중탭하면 레이아웃이 변경되지만 포커스를 유지해야 할 때가 있을 수 있습니다. 이 때 딜레이 속성을 걸어주지 않으면 스크린 리더 포커스가 상단으로 튀어버리는 접근성 문제가 발생합니다.</string>
    <string name="stay_focus_use">접근성 데모 안에 들어가셔서 각 숫자 다음에 있는 삭제 버튼을 이중탭해보세요. 접근성이 적용되지 않은 예시에서는 스크린리더 포커스가 상단으로 튀는 이슈가 발생합니다.</string>
    <string name="stay_focus_example">접근성 포커스 유지 예제</string>
    <string name="stay_focus_good">접근성이 적용된 경우</string>
    <string name="stay_focus_bad">접근성이 적용되지 않은 경우</string>
    <string name="progressBar">막대 그래프로만 진행률을 표시하는 경우</string>
    <string name="progressBarText">ProgressBar 클래스를 사용하여 진행률 상태를 그래프로 표시하는 경우에는 스크린 리더 사용자를 위해 대체 텍스트를 삽입하여 진행률 바에 접근할 수 있도록 해 주어야 합니다. (안드로이드 11 이상에서는 해당 작업 필요 없음).</string>
    <string name="progressBarAccessibleExample">진행률막대, 접근성이 적용된 예시</string>
    <string name="progressBarNoneAccessibleExample">진행률 막대, 접근성이 적용되지 않은 예시</string>
    <string name="startProgress">진행률 표시줄 테스트 시작하기</string>
    <string name="resetProgress">퍼센트 0으로 초기화 하기</string>
    <string name="progressResetComplete">0%로 초기화됨</string>
    <string name="timeLimit">시간 제한 콘텐츠</string>
    <string name="bad_example">getRecommendedTimeoutMillis가 적용되지 않은 dialog</string>
    <string name="open_dialog_no_get_recommended">다이얼로그 실행</string>
    <string name="good_example">getRecommendedTimeoutMillis가 적용된 다이얼로그</string>
    <string name="ok">확인</string>
    <string name="activate_talkback">이 앱을 사용하려면 설정에서 토크백을 활성화하세요.</string>
    <string name="cancel">취소</string>
    <string name="dialog_text">샘플 다이얼로그입니다.</string>
    <string name="seconds">초</string>
    <string name="timeLimitExplain">시간 제한 콘텐츠를 표시하는 경우 상황에 따라 getRecommendedTimeoutMills 메소드를 적용하면 보조기술을 이용하는 사용자에게 도움이 될 수 있습니다.</string>
    <string name="musicPlayer">뮤직 플레이어</string>
    <string name="musicExplain">음악 재생시에는 \n 1. 볼륨키를 이용하여 슬라이더 조절이 가능해야 합니다. \n 2. 슬라이더에 포커스 했을 때는 변경되는 퍼센트를 읽지 않아야 하며 사용자가 슬라이더를 조절했을 때만 퍼센트를 읽어야 합니다. \n 3. 사용자가 퍼센트를 변경하면 기존에 읽던 내용을 정지하고 갱신된 내용을 읽도록 해야 합니다.</string>
    <string name="replay">처음부터 재생</string>
    <string name="adjustTime">시간 조절</string>
    <string name="mPass">경과시간:\u0020</string>
    <string name="second">초</string>
    <string name="mDuration">전체 시간:\u0020</string>
    <string name="mDue">남은 시간:\u0020</string>
    <string name="goodExample">접근성이 적용된 예시</string>
    <string name="badExample">접근성이 적용되지 않은 예시</string>
    <string name="program">명불허전 스포츠 SUV 명가 BMW의 X4M 시승기</string>
    <string name="channelTitle">모트라인</string>
    <string name="playerView">재생수 2,549 • 1개월 전</string>
    <string name="more">더보기</string>
    <string name="channel">채널:\u0020</string>
    <string name="openMenu">메뉴 열기</string>
    <string name="search">검색</string>
    <string name="back">뒤로</string>
    <string name="recommendChannel">추천 채널</string>
    <string name="channelTitle2">YG FAMILY</string>
    <string name="moreInformation">글 정보 더보기</string>
    <string name="test1">테스트 1</string>
    <string name="test2">테스트 2</string>
    <string name="test3">테스트 3</string>
    <string name="test4">테스트 4</string>
    <string name="test5">테스트 5</string>
    <string name="mainScreen">메인 화면</string>
    <string name="subscription">구독</string>
    <string name="overlay">화면의 콘텐츠가 중첩되는 경우</string>
    <string name="popularPro">인기 프로</string>
    <string name="overlay_text">화면 위에 다른 화면을 overlay 형태로 중첩시켜 앱을 구현하는 경우 접근성 적용을 해 주지 않으면 스크린 리더에서는 가려진 요소도 다 읽어주게 되므로 어떤 요소가 실제 콘텐츠인지 알 수 없게 됩니다. 접근성 예시에서 검색 버튼을 눌러 해당 이슈를 체험해 볼 수 있습니다.</string>
    <string name="main_ratingBar">RatingBar 사용하는 경우</string>
    <string name="ratingBar_descript">RatingBar 클래스를 사용하여 평점 매기기 화면을 구현하는 경우 스크린 리더 사용자를 위하여 RatingBar 클래스를 스크린리더에서 SeekBar로 인식할 수 있도록 구현해 주어야 합니다. 접근성이 적용된 예시 화면에서는 평점을 볼륨키를 통하여 조절이 가능합니다.</string>
    <string name="raingBar_text">오늘 수강하신 햄버거 맛있게 먹기 강의는 어떠셨나요?</string>
    <string name="ratingBar_good">RatingBar 사용, 접근성 적용한 경우</string>
    <string name="ratingBar_bad">RatingBar 사용, 접근성 적용하지 않은 경우</string>
    <string name="nestedScroll">화면 스크롤 접근성 데모</string>
    <string name="nestedScrollDescription">NestedScrollView로 여러 콘텐츠를 구현하는 경우에는 기본적으로 톡백에서 한 손가락 쓸기를 이용하더라도 자동으로 화면 스크롤이 되지 않습니다.</string>
    <string name="a11ySample">접근성 예제</string>
    <string name="applyA11y">접근성 적용</string>
    <string name="score">점</string>
    <string name="tabControl">탭컨트롤</string>
    <string name="tabControlExplain">안드로이드 네이티브 접근성에서는 탭 컨트롤이 없습니다. 따라서 각 탭 요소를 탭이라고 읽어주게 하려면 roleDescription 메소드를 사용해야 합니다.</string>
    <string name="tabContent">본문 콘텐츠입니다.</string>
    <string name="homeTab">홈</string>
    <string name="gameTab">게임</string>
    <string name="movieTab">영화</string>
    <string name="bookTab">도서</string>
    <string name="newsTab">뉴스스탠드</string>
    <string name="collapseExpand">확장/축소</string>
    <string name="collapseExpandDescription">특정 객체가 확장/축소 기능을 수행하는 경우에는 현재 상태가 확장된 상태인지 축소된 상태인지를 스크린 리더 사용자에게 알려 주어야 합니다.</string>
    <string name="accessibility_permission_setting">접근성 권한 설정</string>
    <string name="accessibility_description">접근성 권한을 필요로 합니다.</string>
    <string name="confirm">확인</string>
    <string name="accessibleExample">접근성이 적용된 예시</string>
    <string name="nonAccessibleExample">접근성이 적용되지 않은 경우</string>
    <string name="fruit">과일</string>
    <string name="vegitable">채소</string>
    <string name="apple">사과</string>
    <string name="orange">오렌지</string>
    <string name="bean_sprouts">콩나물</string>
    <string name="spinach">시금치</string>
    <string name="webView">웹뷰</string>
    <string name="webview_with_accessibility">접근성이 구현된 웹뷰</string>
    <string name="customControl_button_down">감소</string>
    <string name="customControl_button_up">증가</string>
    <string name="customControl_confirm">확인</string>
    <string name="customControl_confirm_text">밀어서 주문 확인</string>
    <string name="customControl_banner_play">배너 재생</string>
    <string name="closeBanner">배너 닫기</string>
    <string name="layerFocusExplain"> 레이어를 표시할 때 기존 콘텐츠를 흐리게 표시하는 경우가 있습니다. 이때 접근성 구현을 하지 않으면 스크린 리더 사용자는 레이어와 뒷배경 콘텐츠를 구분할 수 없어 콘텐츠를 탐색하는데 많은 어려움이 있습니다.</string>
    <string name="contentGroupingDetail">이름 홍길동, 나이 25세 와 같은 화면에서 각각의 제목과 텍스트의 접근성 초점이 분리되어 있다면 하나의 초점으로 합치는 것이 스크린 리더 사용자의 탐색의 효율성을 높일 수 있습니다.</string>
    <string name="fullscreen_fragment_layer_exampleActivityDescription1">아래 버튼을 눌러 프래그먼트 레이어를 표시해보세요. 하드웨어 키보드의 Tab키, Alt + 화살표 키, 순차 탐색으로 화면을 탐색해 보세요, Talkback의 뒤로가기 제스처(아래쪽 왼쪽 순으로 쓸기)로 레이어를 닫아보세요.</string>
    <string name="fullscreen_fragment_layer_exampleActivityDescription2">
        아래는 매우 질이 나쁜 친구입니다. 화면의 변화를 전혀 알 수 없고, 밖으로 탐색도 가능한 문제가 있습니다. 밖에 있는 버튼에 초점이 가기 때문에 이미 열린 레이어 버튼을 또 누를 수 있고, 앱이 꺼지는 불상사를 경험하실 수 있습니다.
    </string>
    <string name="fullscreen_fragment_layer_openGoodFragment">아주 착한 레이어 열기</string>
    <string name="fullscreen_fragment_layer_openBadFragment">질 나쁜 레이어 열기</string>
</resources>