<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".music.MusicActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/prettyLayout"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/musicExplain"/>

        <Button
            android:id="@+id/example1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goodExample"/>
        <Button
            android:id="@+id/example2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/badExample"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>