<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".labelFor.LabelForActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/prettyLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_for_text"/>

            <Button
                android:id="@+id/example1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_for_example1_title"/>
            <Button
                android:id="@+id/example2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_for_example2_title"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
