<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ContentGrouping.ContentGroupingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:theme="@style/prettyLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/contentGroupingDetail"/>

        <Button
            android:id="@+id/example1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/badExample"/>

        <Button
            android:id="@+id/example2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goodExample"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>