<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nvisions.solutionsforaccessibility.CustomControl.CustomControlGoodActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/customControl_button_down" />
        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="textPersonName"
            android:text="1" />
        <Button
            android:id="@+id/buttonUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customControl_button_up" />
    </LinearLayout>


    <com.nvisions.solutionsforaccessibility.CustomControl.CustomRadioButton
        android:id="@+id/radioButton"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintBottom_toTopOf="@+id/swipeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.ebanx.swipebtn.SwipeButton
        android:id="@+id/swipeButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/customControl_confirm"
        app:button_background="@drawable/custom_control_confirm_button"
        app:button_image_height="50dp"
        app:button_image_width="50dp"
        app:inner_text="@string/customControl_confirm_text"
        app:inner_text_bottom_padding="5dp"
        app:inner_text_color="@android:color/white"
        app:inner_text_size="16sp"
        app:inner_text_top_padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/radioButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/swipeButton" />

        <TextView
        android:visibility="gone"
        android:id="@+id/bannerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customControl_banner_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closeBanner"
        android:gravity="center"
        android:id="@+id/closeBanner"
        app:layout_constraintTop_toBottomOf="@+id/bannerButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>

