<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/bg_transparent">

    <ImageView
        android:id="@+id/big_photo"
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:scaleType="fitXY"
        android:src="@drawable/big_photo_car" />

    <Button
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:enabled="false"
        android:layout_height="50dp"
        android:layout_marginLeft="7dp"
        android:layout_below="@id/big_photo"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/channelTitle"
        android:background="@drawable/logo" />
    <TextView
        android:id="@+id/text1"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/logo"
        android:layout_alignTop="@id/logo"
        android:layout_toLeftOf="@id/more_button"
        android:layout_marginLeft="5dp"
        android:textSize="18dp"
        android:text="@string/program"
        />

    <Button
        android:id="@+id/more_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignTop="@id/logo"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/more"
        android:background="@drawable/btn_more"
        android:enabled="false" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channelTitle"
        android:layout_below="@id/text1"
        android:textColor="#528fc2"
        android:layout_alignLeft="@id/text1"
        />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerView"
        android:layout_alignBaseline="@id/text2"
        android:layout_toRightOf="@id/text2"
        android:layout_marginLeft="12dp"
        />

</RelativeLayout>