<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FullscreenFragmentLayer.FullscreenFragmentLayerExampleActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:id="@+id/FragmentLayerExample_Main"
        android:theme="@style/prettyLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fullscreen_fragment_layer_mainEntry"
            android:text="@string/fullscreen_fragment_layer_exampleActivityDescription1" />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_OpenFullscreenLayerFragmentGood"
            android:text="@string/fullscreen_fragment_layer_openGoodFragment" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fullscreen_fragment_layer_exampleActivityDescription2"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_OpenFullscreenLayerFragmentBad"
            android:text="@string/fullscreen_fragment_layer_openBadFragment" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/FragmentLayerExample_Layer">
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>